# vcpkg-conan-handle-cmake

./: .clang-format  .clang-tidy  .cmake-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.txt  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
cmake/: CheckPathParentheses.cmake  ConanHandle.cmake  Doxygen.cmake  InstallArtifacts.cmake  NoInSourceBuilds.cmake  VCPKG.cmake  VcpkgHandle.cmake
src/: CMakeLists.txt  main.cpp
